revert back to 2 workflows

--- a/.github/workflows/deno-deploy.yml
+++ b/.github/workflows/deno-deploy.yml
@@ -1,4 +1,4 @@
-name: Publish on GitHub Pages
+name: Publish on Deno Deploy
 
 on:
   push:
@@ -7,6 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
       - name: Clone repository
@@ -19,11 +22,10 @@ jobs:
 
       - name: Build site
         run: |
-          deno task build --location=https://bradharris.dev
+          deno run -A https://deno.land/x/lume/ci.ts
 
-      - name: Deploy
-        uses: crazy-max/ghaction-github-pages@v2.0.1
+      - name: Deploy to Deno Deploy
+        uses: denoland/deployctl@v1
         with:
-          build_dir: _site
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          project: bradharris-dev
+          entrypoint: server.ts
