--- a/.github/workflows/deno-deploy.yml
+++ b/.github/workflows/deno-deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build site
         run: |
-          deno run -A https://deno.land/x/lume/ci.ts
+          deno task build --location=https://bradharris.dev
 
       - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
